[package]
name = "build-here"
version = "0.1.0"
authors = ["Ron Ziroby Romero <ziroby@ziroby.com>"]
edition = "2018"
description = "A universal build tool"
readme = "README.md"
repository = "https://github.com/ziroby/b"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
